<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name"></string>


    <string name="listview_header_hint_normal">下拉刷新</string>
    <string name="listview_header_hint_release">释放立即刷新</string>
    <string name="listview_loading">正在加载...</string>
    <string name="nomore_loading">没有了</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_done">刷新完成</string>
    <string name="listview_header_last_time">上次更新时间：</string>

    <!--footer-->
    <string name="list_footer_loading">正在加载中…</string>
    <string name="list_footer_network_error">点击重新加载</string>
    <string name="list_footer_end">已全部加载完</string>

    <string name="text_just">刚刚</string>
    <string name="text_seconds_ago">秒前</string>
    <string name="text_minute_ago">分钟前</string>
    <string name="text_hour_ago">小时前</string>
    <string name="text_day_ago">天前</string>
    <string name="text_month_ago">月前</string>
    <string name="text_year_ago">年前</string>


    <string name="shouhuo_address">收货地址</string>
    <string name="shou_huo_ren">收货人</string>
    <string name="lian_xi_dian_hua">联系电话</string>
    <string name="xiang_xi_di_zhi">详细地址</string>
    <string name="add_shou_huo_address">添加收货地址</string>
    <string name="edit_new_address">编辑地址</string>
    <string name="select_address">选择地址</string>

    <string name="que_ren_ding_dan">确认订单</string>
    <string name="username">请输入用户名</string>
    <string name="pwd">请输入密码</string>
    <string name="yanzheng">验证码</string>
    <string name="login">登录</string>
    <string name="next_step">下一步</string>
    <string name="find_pwd">找回密码</string>
    <string name="hint_yanzhengma">验证码</string>
    <string name="setpwd">密码</string>
    <string name="kai_qi_xue_xi">开启学习乐</string>
    <string name="set_pwd">设置密码</string>
    <string name="register">注册</string>
    <string name="xieyi">协议</string>
    <string name="register_xie_yi">注册协议</string>

    <string name="action_settings">Settings</string>
    <string name="wel_description">启动动画</string>
    <string name="entry">Entry</string>
    <string name="wo">我</string>
    <string name="shi">是</string>
    <string name="xu">徐</string>
    <string name="xiao">小</string>
    <string name="xing">星</string>

</resources>